# safety_detection

./: .gitignore  README.md  ai_prompt_docs_en.docx  check_yaml.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  equipment_classes.yaml  settings.py
core/: __init__.py  alarm_manager.py  core_integration.docx  detector.py  event_bus.py  pose_detector.py  stream_worker.py
gui/: __init__.py  alarm_overlay.py  alarm_panel.py  main_window.py  stream_cell.py
logs/: events.csv  events.jsonl
models/: best.pt
scripts/: get_model.py  integrate_trained_model.py
training/: __init__.py  train.py
utils/: __init__.py  draw.py  logger.py  screenshot.py  video_source.py
