[project]
name = "safety-detection"
version = "0.1.0"
description = "Safety equipment detection system with PyQt6 and YOLOv8"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PyQt6>=6.7.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "pygame>=2.6.0",
    "numpy>=1.26.0",
    "PyYAML>=6.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
